# Python_for_Datasciences

./: README.md
0-Starting/: .gitignore
0-Starting/ex00/: Hello.py
0-Starting/ex01/: format_ft_time.py
0-Starting/ex02/: find_ft_type.py  tester.py
0-Starting/ex03/: NULL_not_found.py
0-Starting/ex04/: whatis.py
0-Starting/ex05/: building.py
0-Starting/ex06/: filterstring.py  ft_filter.py
0-Starting/ex07/: sos.py
0-Starting/ex08/: Loading.py  tester.py
0-Starting/ex09/: README.md  pyproject.toml  setup.py
0-Starting/ex09/ft_package/: __init__.py  count.py
