[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
authors = [{name = "Susanne Brandt", email = "subrandt@student.42angouleme.fr"}]
requires-python = ">=3.7"